# paco

./: CMakeLists.txt
include/paco/: combinators.h  common.h  fundamental.h  fundamentals.h  recognizer.h  recognizer_base.h  recognizer_factory.h
src/: CMakeLists.txt  combinators.cpp  common.cpp  fundamental.cpp  fundamentals.cpp  recognizer.cpp  recognizer_factory.cpp
test/: CMakeLists.txt  unit-combinators.cpp  unit-common.cpp  unit-fundamentals.cpp  unit-recognizer.cpp  unit-recognizers.cpp
